@@ -4,6 +4,12 @@ drumkv1 - an old-school drum-kit sampler
 ChangeLog
 
 
+GIT HEAD
+ 
+- An anti-flooding timer is now in place in MIDI Controller
+  assignment (aka. MIDI learn) dialog. (EXPERIMENTAL)
+
+
 0.8.6  2017-12-20  The End of Autumn'17 release.
 
 - Set on a minimum attack time of 500usec as much to prevent
